test_suite/alan-2022-examples/failing/002830_mutation.alan
source t begin I leave := 30 end
